--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
 
     <!-- custom css file -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="My-Page/style.css" />
 
     <!-- google font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
