--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@
       });
     </script>
     <!-- custom js file linking -->
-    <script src="js/script.js"></script>
+    <script src="My-Page/script.js"></script>
     
   </body>
 </html>
