--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
             <button class="c-btn h-btn mt-3 py-3 px-5 rounded-pill">
               <!-- here download attribute is used for adding download functionality to button  -->
               <a
-                href="Jackson Lolkipayang_CV.pdf"
+                href="My-Page/Jackson Lolkipayang_CV.pdf"
                 download="SampleCV"
                 style="text-decoration: none;color: #fff;"
                 >Download CV</a
