--- a/index.html
+++ b/index.html
@@ -829,15 +829,15 @@
         <a href="#contact">Contact</a>
       </div>
       <div class="social-links mt-5" data-aos="fade-up">
-        <button href="https://www.facebook.com" target="_blank" class="btn rounded-pill facebook">
+        <a href="https://www.facebook.com" target="_blank" class="btn rounded-pill facebook">
           <i class="bi bi-facebook"></i>
-        </button>
-        <button href="https://wa.me/+254715074783" target="_blank" class="btn rounded-pill whatsapp">
+        </a>
+        <a href="https://wa.me/+254715074783" target="_blank" class="btn rounded-pill whatsapp">
           <i class="bi bi-whatsapp"></i>
-        </button>
-        <button href="https://twitter.com" target="_blank" class="btn rounded-pill twitter">
+        </a>
+        <a href="https://twitter.com" target="_blank" class="btn rounded-pill twitter">
           <i class="bi bi-twitter"></i>
-        </button>
+        </a>
       </div>
       <hr class="text-muted my-4" />
 
