--- a/index.html
+++ b/index.html
@@ -195,16 +195,19 @@
                 ><span class="text-muted ms-2">Nov 8,2024</span>
               <h4 class="card-title mt-3">Web Design Project</h4>
               <div class="social-links mt-4">
-                  <button href="https://www.weathertrends360.com/" class="rounded-pill dribble">
-                    <i class="bi bi-dribbble"></i>
-                  </button>
-                  <button href="" class="rounded-pill whatsapp">
-                    <i class="bi bi-whatsapp"></i>
-                  </button>
-                  <button href="" class="rounded-pill behance">
-                    <i class="bi bi-behance"></i>
-                  </button>
-              </div>
+                 <a href="https://www.facebook.com" target="_blank" class="btn rounded-pill facebook">
+                 <i class="bi bi-facebook"></i>
+                 </a>
+                <a href="https://www.facebook.com" target="_blank" class="btn rounded-pill facebook">
+                <i class="bi bi-facebook"></i>
+                </a>
+                <a href="https://wa.me/+254715074783" target="_blank" class="btn rounded-pill whatsapp">
+                  <i class="bi bi-whatsapp"></i>
+                </a>
+                <a href="https://twitter.com" target="_blank" class="btn rounded-pill twitter">
+                  <i class="bi bi-twitter"></i>
+                </a>
+                </div>
               <p class="text-muted mt-3">I am a highly skilled Web Design and Development Specialist with a proven track record of creating visually appealing, user-friendly, and adaptive websites that enhance user experiences and drive engagement. 
                 My expertise lies in designing and maintaining responsive websites that cater to diverse audiences across various devices and screen sizes.
 
@@ -283,15 +286,15 @@
                 ><span class="text-muted ms-2 ms-md-0">Nov 8,2024</span>
               <h4 class="card-title mt-3">The Web Development Projects</h4>
               <div class="social-links mt-4">
-                  <button href="" class="rounded-pill dribble">
-                    <i class="bi bi-dribbble"></i>
-                  </button>
-                  <button href="" class="rounded-pill whatsapp">
-                    <i class="bi bi-whatsapp"></i>
-                  </button>
-                  <button href="" class="rounded-pill behance">
-                    <i class="bi bi-behance"></i>
-                  </button>
+                  <a href="https://www.facebook.com" target="_blank" class="btn rounded-pill facebook">
+                      <i class="bi bi-facebook"></i>
+                    </a>
+                    <a href="https://wa.me/+254715074783" target="_blank" class="btn rounded-pill whatsapp">
+                      <i class="bi bi-whatsapp"></i>
+                    </a>
+                    <a href="https://twitter.com" target="_blank" class="btn rounded-pill twitter">
+                      <i class="bi bi-twitter"></i>
+                    </a>
               </div>
               <p class="text-muted mt-3">
 
@@ -407,15 +410,15 @@
                 ><span class="text-muted ms-2 ms-md-0">Nov 8,2024</span>
               <h4 class="card-title mt-3">Debugging Expertise and Problem-Solving</h4>
               <div class="social-links mt-4">
-                  <button href="" class="rounded-pill dribble">
-                    <i class="bi bi-dribbble"></i>
-                  </button>
-                  <button href="" class="rounded-pill whatsapp">
+                  <a href="https://www.facebook.com" target="_blank" class="btn rounded-pill facebook">
+                    <i class="bi bi-facebook"></i>
+                  </a>
+                  <a href="https://wa.me/+254715074783" target="_blank" class="btn rounded-pill whatsapp">
                     <i class="bi bi-whatsapp"></i>
-                  </button>
-                  <button href="" class="rounded-pill behance">
-                    <i class="bi bi-behance"></i>
-                  </button>
+                  </a>
+                  <a href="https://twitter.com" target="_blank" class="btn rounded-pill twitter">
+                    <i class="bi bi-twitter"></i>
+                  </a>
               </div>
               <p class="text-muted mt-3">In my role as a Web Design and Development Specialist, I have honed my skills in identifying and resolving technical issues efficiently, 
                 ensuring optimal website performance. My debugging process involves a systematic approach to detecting, analyzing, and fixing errors in code or design. <br>
@@ -426,7 +429,7 @@
                  isolate the problem and confirm fixes without introducing new issues.</li>
                  <li>Code Optimization: Beyond resolving immediate errors, I focus on improving code quality, reducing redundancies, 
                  and enhancing maintainability to prevent future issues.</li>
-                 <li>Cross-Platform Validation: Ensuring consistent performance across different browsers and devices is a 
+                 <li>Cross-Platform Validation: Ensuring consistent performance across different browsers and devices is a a 
                  key priority, achieved through rigorous testing and responsive design practices.</li>
                  <li>Effective Communication: Throughout the debugging process, I maintain clear communication with 
                  stakeholders, providing updates on progress and ensuring alignment on resolutions.</li>
