--- a/index.html
+++ b/index.html
@@ -195,9 +195,6 @@
                 ><span class="text-muted ms-2">Nov 8,2024</span>
               <h4 class="card-title mt-3">Web Design Project</h4>
               <div class="social-links mt-4">
-                 <a href="https://www.facebook.com" target="_blank" class="btn rounded-pill facebook">
-                 <i class="bi bi-facebook"></i>
-                 </a>
                 <a href="https://www.facebook.com" target="_blank" class="btn rounded-pill facebook">
                 <i class="bi bi-facebook"></i>
                 </a>
@@ -222,7 +219,7 @@
                 <li>Responsive Functionality: Ensured the website provided seamless navigation and accessibility across desktops, 
                   tablets, and mobile devices.</li>
                 <li>End-User Support: Acted as the primary point of contact for resolving technical issues, 
-                  ensuring swift responses and maintaining high operational efficiency.</li>
+                  ensuring swift responses, and maintaining high operational efficiency.</li>
                   </ul>
                 My approach combines a deep understanding of web technologies with a commitment to staying updated on the latest design trends. By focusing on user-centric designs and robust functionality, I ensure that every project meets and exceeds client expectations.</p>
             </div>
